creacion de entidad categoria, correcion de variables integer a long, implementacion de buscar por nombre, estado y categoria, implementacion de la paginacion